Extend API to enable retrieval of all data object and data element instances.
